<resources>
    <string name="app_name">VillagesGPS</string>
    <string name="getstarted">Get Started</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="getdirection">Get Directions</string>
    <string name="login">Log In</string>
    <string name="loginstr">Log In with your social media account</string>
    <string name="tour">Tour</string>
    <string name="loginfb">Login With Facebook</string>
    <string name="logingoogle">Login With Google</string>
    <string name="menu_home">Home</string>
    <string name="menu_point">Point to Point</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_more">More</string>
    <string name="menu_favorite">Favorites</string>
    <string name="search">Search</string>
    <string name="google_maps_key">AIzaSyDFgRUyhPdUhxXPohMRYNN-FHIYc0YBhG0</string>
    <string name="google_maps_key_new">AIzaSyDjgTMEhPnL0xVPsuCPvqfeMLCAkw2GS9w</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faq">FAQ</string>
    <string name="share">Share</string>
    <string name="about">About Us</string>
    <string name="contact">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="sharethisapptext">Share this app with your Friends</string>
    <string name="belowisthesocialtext">Below is the Social media platform to share the app.</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="aboutvillage">About Villages GPS</string>
    <string name="moreinfo">More Info</string>
    <string name="feedbackstr">Please check out the <u><b>FAQ</b></u> to see if the answer to your question is there before you send us a message</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="standard">Standard</string>
    <string name="hybird">Hybrid</string>
    <string name="moreques">Have more questions?</string>
    <string name="morequesstr">Click on Contact Us and send us us your question.We would be happy to assist.</string>
    <string name="ticketprice">Ticket Price</string>
    <string name="eventdate"><![CDATA[Event Date & Time]]></string>
    <string name="dailyforecast">Daily Forecast</string>
    <string name="weekly">Weekly Forecast</string>
    <string name="address">Address</string>
    <string name="address_place">Address/Place</string>
    <string name="place">Place</string>
    <string name="category">Categories</string>
    <string name="favorities">Favorities</string>
    <string name="nearby">Nearby</string>
    <string name="recentserach">Recent Searches</string>
    <string name="next">Next</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="terms">Terms of use</string>
    <string name="menu_mph">MPH</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="villas">Villas</string>
    <string name="appversion">App Version</string>
    <string name="version">Version 2.0</string>
    <string name="taketour">Take a Tour</string>
    <string name="faqs">FAQ</string>
    <string name="ad_id_banner">ca-app-pub-4374134108330125/7974936019</string>
    <string name="ok">Ok</string>
    <string name="emptyname">Please enter name.</string>
    <string name="emptyemail">Please enter valid email</string>
    <string name="emptysubject">Please enter subject.</string>
    <string name="emptymsg">Please enter message</string>
    <string name="interneterror">Internet not available, Cross check your internet connectivity and try again.</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicmFqaXZjaGF1ZGhhcnkiLCJhIjoiY2pieXIyMWVrMzB4czJ3bzd5dTV2eDRzbCJ9.ITqr6zz699mfTmtyQiqiQQ</string>
    <string name="call">Call</string>
    <string name="restaurants">Restaurants</string>
    <string name="shopping">Shopping</string>
    <string name="unauthorized_access">Unauthorized Access</string>
    <string name="handleerror">handleError</string>
    <string name="internal_server_error">Internal Server error</string>
    <string name="cancel">Cancel</string>
    <string name="newversion">New Version available.</string>
    <string name="newupdated">New updates are available. Would you like to update them now?.</string>
    <string name="update">Update</string>
    <string name="notnow">Not Now</string>
    <string name="detail">detail</string>
    <string name="to_edit_name_press_down_on_the_name_and_hold">To edit name, Press down on the name and hold</string>
    <string name="fav_top_text">To Edit name: Press down on the name and hold.\nTo Delete: Click delete or click red minus.\nTo Rearrange: Put your finger on the three lines and move.</string>
    <string name="welcomehelpcart">Welcome to the 24 Hr Cart Club</string>
    <string name="ourmission">Our Mission</string>
    <string name="golfcarthelp">We are committed to providing 24hr Peace-of-mind to the residents in communities surrounding the Lake, Marion, and Sumter County borders. Having a plan in the event of an emergency starts by being a member of the 24hr Cart Club.\n\nOur service area includes, but is not limited to, the communities of Harbor Hills, Spruce Creek, Stone Crest, The Villages, and Water Oaks.</string>
    <string name="miles_hour">MILES/H</string>
    <string name="menu_speed">Speedometer</string>
    <string name="yes">Yes</string>
    <string name="exit">Do you want to Exit ?</string>
    <string name="no">No</string>
    <string name="typeofphone">Type of Phone</string>
    <string name="selectdevice">Select the Phone</string>
    <string-array name="device">
        <item>Android</item>
        <item>Tablet</item>
    </string-array>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="sortby">SORT BY</string>
    <string name="notications">Notifications</string>
    <string name="for_sale">For Sale</string>
    <string name="for_rent">For Rent</string>
    <string name="sort">Sort</string>
    <string name="continue_str">Continue</string>
    <string name="pointtopoint">Point to Point is just a bonus feature we added only meant to get directions from
        two different places that you’re Not currently at.\n\nWhen you click start it gives you the option to see the time and distance it takes to get from those two places by golf cart or automobile.\n\nThis is Not Navigation Directions…\n\nTo get Directions with Navigation… Find the place you want to go to and once you find it,
        click directions by Automobile or Golf Cart.\n\nNow you are good to go.</string>
    <string name="search_str">Down south in the new areas, type in the Street Address or name of a Place you are looking for.\n\nThen make sure to type in either “The Villages”  OR “Wildwood” as the city and all addresses as well as places will show up.</string>
    <string name="noticationslist">Notification List</string>
    <string name="rateus">Rate Us</string>
    <string name="contact_us">Please send us a email with the type of phone you have and your issue.\n\nThank You,\nVillages GPS Team</string>
    <string name="mailstr"><u>villagegps@gmail.com</u></string>
    <string name="how_to">How was your experience with us</string>
    <string name="fixit">if you have any issues at all,\nPlease contact us so we can fix it</string>
    <string name="review">if you like what we are doing \nand want to help us out,\nPlease leave us a nice review &#128522;</string>
    <string name="see_detail">See Details</string>
    <string name="pointtopointstr">Point to Point</string>
    <string name="tutorials">Tutorials</string>
    <string name="subscription">$6.99 Per Year Susbcription.\nCancel at any time, \nand No ads.</string>
    <string name="install_subscribe"><![CDATA[Install & Subscribe]]></string>
    <string name="about_gps">"Village GPS is everything you love about GPS, plus... "</string>
    <string name="no_user_location_permissions_how_are_we_here_ewc_devs_should_handle_this_case">No user location permissions? How are we here. EWC devs should handle this case.</string>
    <string name="no_location_services_permissions">No location services permissions</string>
    <string name="all_for_just">All for just 6.99 per year!</string>
    <string name="no_ads">No Ads.</string>
    <string name="only_pay">Only pay once per year.</string>
    <string name="cancel_at">Cancel at any time.</string>
    <string name="terms_condition"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="privacy"><u>Privacy Policy</u></string>
    <string name="subscription_str">Subscription</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="no_data_found">No Data Found</string>
    <string name="package_">package</string>
    <string name="please_enable_you_location_from_location_setting">Please enable you location from Location Setting.</string>
    <string name="failed_to_access_location">Failed to access location</string>
    <string name="min">min</string>
    <string name="tap_the_google_play_store_app_icon_on_your_android_device_s_home_screen_or_in_your_app_drawer">Tap the &quot;Google Play Store&quot; app icon on your Android device\'s home screen or in your app drawer.</string>
    <string name="please_return_to_the_villages_city_limits">Please Return to The Villages City Limits.</string>
    <string name="please_check_your_internet_connectivity">Please check your internet connectivity</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="title_activity_terms_and_condition">TermsAndConditionActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="terms_of_user">Terms of use</string>
    <string name="take_a_tour">Take a Tour</string>
    <string name="error">error</string>
    <string name="okay">ok</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="weather">Weather</string>
    <string name="favorites">Favorites</string>
    <string name="speedometer">Speedometer</string>
    <string name="golf_course">Golf Course</string>
    <string name="sort_by">Sort By</string>
    <string name="price_low_to_high">Price Low to High</string>
    <string name="price_high_to_low">Price High to Low</string>
    <string name="apply">Apply</string>
    <string name="direction_by_automobile">Direction by Automobile</string>
    <string name="direction_by_golf_cart">Direction by Golf Cart</string>
    <string name="details">Details</string>
    <string name="find_property">Find Property</string>
    <string name="point_to_point">Point to Point</string>
    <string name="about_us">About Us</string>
    <string name="app_version">App Version</string>
    <string name="notifications">Notifications</string>
    <string name="notification_list">Notification List</string>
    <string name="rate_us">Rate Us</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="play_store_app_not_found">Play Store app not found</string>
    <string name="play_store_app_not_installed">Play Store app not installed</string>
</resources>