<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardBackgroundColor="@color/appwhite"
        app:cardCornerRadius="@dimen/_3sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                style="@style/AppTextHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:padding="@dimen/size_5"
                android:text="@string/menu_point"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_cancelled"
                android:tint="@color/appblack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:padding="@dimen/_7sdp"
                android:text="@string/pointtopoint"
                android:textColor="@color/appblack"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintTop_toBottomOf="@id/ivClose"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:padding="@dimen/_7sdp"
                android:text="@string/mailstr"
                android:textColor="@color/appdarkblu"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone"
               app:layout_constraintTop_toBottomOf="@id/tvSubtitle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ok_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/bg_button_brown_dark"
                android:text="@string/continue_str"
                android:textAllCaps="false"
                android:textColor="@color/appwhite"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@id/tvEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>