<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="subscription"
            type="com.golfcart.ui.subscription.SubscriptionViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appwhite"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:ignore="MissingDefaultResource">

        <RelativeLayout
            android:id="@+id/topbar_RL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/colorPrimary">

                <RelativeLayout
                    android:id="@+id/back_RL"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/backbutton" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/AppTextMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_centerInParent="true"
                        android:gravity="center_vertical"
                        android:text="@string/back"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/headertxt"
                    style="@style/AppTextMedium"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/_70sdp"
                    android:layout_marginRight="@dimen/_70sdp"
                    android:gravity="center|center_horizontal"
                    android:singleLine="true"
                    android:text="@string/subscription_str"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/RL"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="end">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/clearall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/restore_purchase"
                        android:textColor="@color/appwhite"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/detailRL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/topbar_RL"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@color/appwhite"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:text="@string/about_gps"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/adsLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about"
                android:layout_marginTop="@dimen/_6sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/tick" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/no_ads"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@drawable/background_dotted" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/tick" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/only_pay"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@drawable/background_dotted" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/tick" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/cancel_at"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layoutCoupoun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/adsLL"
                android:layout_marginTop="@dimen/_10sdp">

                <LinearLayout
                    android:id="@+id/llCoupoun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_toStartOf="@id/btnApply"
                    android:background="@drawable/bg_editext_round"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="@dimen/_10sdp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etCoupoun"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="Enter Coupon Code"
                        android:textColorHint="@color/light_grey" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnApply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/bg_blue_round"
                    android:text="Apply"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llCoupoun"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:text="OR"
                    android:textSize="@dimen/_13sdp" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/detailbtnLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutCoupoun"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sharebtn"
                    style="@style/AppButtonRegularIcon"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_brown_dark"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/all_for_just"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_condition"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_50sdp"
                        android:text="@string/privacy"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</layout>